// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a Sidebar with align prop set 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c12 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: white;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  box-shadow: 0px 0px 0px 2px;
}

.c9[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c9 {
  border: 0;
  background: unset;
  color: white;
  fill: white;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9:hover {
  color: #808080;
  fill: #808080;
}

.c2 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  -webkit-transform-origin: calc(50% + 0px) calc(50% + 0px);
  -ms-transform-origin: calc(50% + 0px) calc(50% + 0px);
  transform-origin: calc(50% + 0px) calc(50% + 0px);
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c2[aria-hidden="true"] {
  pointer-events: none;
  opacity: 0;
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  visibility: hidden;
  will-change: transform,opacity;
}

.c7 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  -webkit-transform-origin: calc(50% + 0px) calc(50% + 0px);
  -ms-transform-origin: calc(50% + 0px) calc(50% + 0px);
  transform-origin: calc(50% + 0px) calc(50% + 0px);
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c7[aria-hidden="true"] {
  pointer-events: none;
  -webkit-transform: translate3d(calc(100% + 0px),0px,0px);
  -ms-transform: translate3d(calc(100% + 0px),0px,0px);
  transform: translate3d(calc(100% + 0px),0px,0px);
  visibility: hidden;
  will-change: transform,opacity;
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -moz-tap-highlight-color: rgba(0,0,0,0);
}

.c6 {
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c5 {
  top: 0;
  height: 100vh;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  overflow: auto;
  left: auto;
  right: 0;
}

.c11 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

.c0 {
  background-color: black;
  opacity: 0.6;
}

.c8 {
  position: fixed;
  min-height: 24px;
  padding: 0 0.25rem;
  top: 0.5rem;
  right: calc(250px + 0.5rem);
}

.c8:hover {
  color: #f2f2f2;
  fill: #f2f2f2;
}

.c4 {
  background-color: white;
  box-shadow: -3px 0px 12px 0px rgba(0,0,0,0.1);
  width: 250px;
}

<portal
  class=""
>
  <div>
    <button
      aria-hidden="false"
      class="c0 c1 c2 c3 "
      role="button"
      tabindex="-1"
    />
    <div
      class="c3"
    >
      <div
        aria-hidden="false"
        aria-modal="true"
        class="c4 c5 c6 c7 c3"
        role="dialog"
        style="width: 250px;"
        width="250px"
      >
        <button
          class="c8 c9 c10 "
          kind="link"
          type="button"
        >
          <div
            class="c11 c3"
          >
            Close
          </div>
          <svg
            aria-hidden="true"
            class="c12 c3"
            role="img"
            size="1"
            style="size: 1px;"
            viewBox="0 0 352 512"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        This is the content
      </div>
    </div>
  </div>
</portal>
`;

exports[`renders correctly for a Sidebar with hideCloseButton prop set 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  -webkit-transform-origin: calc(50% + 0px) calc(50% + 0px);
  -ms-transform-origin: calc(50% + 0px) calc(50% + 0px);
  transform-origin: calc(50% + 0px) calc(50% + 0px);
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c2[aria-hidden="true"] {
  pointer-events: none;
  opacity: 0;
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  visibility: hidden;
  will-change: transform,opacity;
}

.c7 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  -webkit-transform-origin: calc(50% + 0px) calc(50% + 0px);
  -ms-transform-origin: calc(50% + 0px) calc(50% + 0px);
  transform-origin: calc(50% + 0px) calc(50% + 0px);
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c7[aria-hidden="true"] {
  pointer-events: none;
  -webkit-transform: translate3d(calc(-100% + 0px),0px,0px);
  -ms-transform: translate3d(calc(-100% + 0px),0px,0px);
  transform: translate3d(calc(-100% + 0px),0px,0px);
  visibility: hidden;
  will-change: transform,opacity;
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -moz-tap-highlight-color: rgba(0,0,0,0);
}

.c6 {
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c5 {
  top: 0;
  height: 100vh;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  overflow: auto;
  left: 0;
  right: auto;
}

.c0 {
  background-color: black;
  opacity: 0.6;
}

.c4 {
  background-color: white;
  box-shadow: 3px 0px 12px 0px rgba(0,0,0,0.1);
  width: 250px;
}

<portal
  class=""
>
  <div>
    <button
      aria-hidden="false"
      class="c0 c1 c2 c3 "
      role="button"
      tabindex="-1"
    />
    <div
      class="c3"
    >
      <div
        aria-hidden="false"
        aria-modal="true"
        class="c4 c5 c6 c7 c3"
        role="dialog"
        style="width: 250px;"
        width="250px"
      >
        This is the content
      </div>
    </div>
  </div>
</portal>
`;

exports[`renders correctly for a default Sidebar 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c12 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: white;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  box-shadow: 0px 0px 0px 2px;
}

.c9[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c9 {
  border: 0;
  background: unset;
  color: white;
  fill: white;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9:hover {
  color: #808080;
  fill: #808080;
}

.c2 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  -webkit-transform-origin: calc(50% + 0px) calc(50% + 0px);
  -ms-transform-origin: calc(50% + 0px) calc(50% + 0px);
  transform-origin: calc(50% + 0px) calc(50% + 0px);
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c2[aria-hidden="true"] {
  pointer-events: none;
  opacity: 0;
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  visibility: hidden;
  will-change: transform,opacity;
}

.c7 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  -webkit-transform-origin: calc(50% + 0px) calc(50% + 0px);
  -ms-transform-origin: calc(50% + 0px) calc(50% + 0px);
  transform-origin: calc(50% + 0px) calc(50% + 0px);
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c7[aria-hidden="true"] {
  pointer-events: none;
  -webkit-transform: translate3d(calc(-100% + 0px),0px,0px);
  -ms-transform: translate3d(calc(-100% + 0px),0px,0px);
  transform: translate3d(calc(-100% + 0px),0px,0px);
  visibility: hidden;
  will-change: transform,opacity;
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -moz-tap-highlight-color: rgba(0,0,0,0);
}

.c6 {
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c5 {
  top: 0;
  height: 100vh;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  overflow: auto;
  left: 0;
  right: auto;
}

.c11 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

.c0 {
  background-color: black;
  opacity: 0.6;
}

.c8 {
  position: fixed;
  min-height: 24px;
  padding: 0 0.25rem;
  top: 0.5rem;
  left: calc(250px + 0.5rem);
}

.c8:hover {
  color: #f2f2f2;
  fill: #f2f2f2;
}

.c4 {
  background-color: white;
  box-shadow: 3px 0px 12px 0px rgba(0,0,0,0.1);
  width: 250px;
}

<portal
  class=""
>
  <div>
    <button
      aria-hidden="false"
      class="c0 c1 c2 c3 "
      role="button"
      tabindex="-1"
    />
    <div
      class="c3"
    >
      <div
        aria-hidden="false"
        aria-modal="true"
        class="c4 c5 c6 c7 c3"
        role="dialog"
        style="width: 250px;"
        width="250px"
      >
        <button
          class="c8 c9 c10 "
          kind="link"
          type="button"
        >
          <div
            class="c11 c3"
          >
            Close
          </div>
          <svg
            aria-hidden="true"
            class="c12 c3"
            role="img"
            size="1"
            style="size: 1px;"
            viewBox="0 0 352 512"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        This is the content
      </div>
    </div>
  </div>
</portal>
`;
